--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,2 +1,3 @@
 pull_secret_path = "~/Downloads/pull-secret.txt"
 location = "eastus"
+subscription_id = "TO_BE_FILLED" ## also "export TF_VAR_subscription_id=xxx" can be used
