--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,4 +1,8 @@
 pull_secret_path = "~/Downloads/pull-secret.txt"
 location = "eastus"
 subscription_id = "TO_BE_FILLED" ## also "export TF_VAR_subscription_id=xxx" can be used
-domain = "example.com"  ## required by the backend terraform provider
+api_server_profile = "Private"
+ingress_profile = "Private"
+aro_version = "4.15.27"
+acr_private = false
+restrict_egress_traffic = false
